--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <section id="section">
                     <div class="left-section">
-                        <p class="head">I have ...</p>
+                        <p class="head">Mənim varımdır ...</p>
                         <div class="currencies" id="from">
                             <button class="firstBtn">RUB</button>
                             <button>USD</button>
@@ -55,7 +55,7 @@
 
                     </div>
                     <div class="right-section">
-                        <p class="head">I want to buy ...</p>
+                        <p class="head">Almaq istəyirəm ...</p>
 
                         <div class="currencies" id="to">
                             <button class="firstBtn">RUB</button>
